# GBADoom

./: .gitignore  CMakeLists.txt  README.md
include/: doomdef.h  gba_functions.h  i_system_e32.h  tables.h
source/: CMakeLists.txt  d_main.c  hu_stuff.c  i_main.c  i_system_e32.cpp  i_system_gba.cpp  i_system_sparkfun_thingplus.c  p_pspr.c  r_draw.c  r_hotpath.iwram.c  st7789.c  st7789.h  tables.c
